welcome section done except margin, padding and gap

--- a/index.html
+++ b/index.html
@@ -17,8 +17,35 @@
             </ul>
         </div>
     </div>
-    <div class="welcome"></div>
-    <div class="infos"></div>
+    <div class="welcome">
+        <div class="content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contast</p>
+            <button type="submit">Sign up</button>
+        </div>
+        <div class="photo">this is a placeholder for image</div>
+    </div>
+    <div class="infos">
+        <h1>Some random information.</h1>
+        <div class="cards">
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="quote"></div>
     <div class="sign-up"></div>
     <div class="footer"></div>
