--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </div>
         </div>
     </div>
-    <div class="quote"></div>
+    <div class="quote">
+        <div class="quote-cont">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <h1>-Jaehaerys I Targaryen</h1>
+        </div>
+    </div>
     <div class="sign-up"></div>
     <div class="footer"></div>
 </body>
