--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
             <h1>-Jaehaerys I Targaryen</h1>
         </div>
     </div>
-    <div class="sign-up"></div>
+    <div class="sign-up">
+        <div class="pop">
+            <div class="texts">
+                <h1>Call to action! It's time!</h1>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button type="submit">Sign up</button>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
