footer section done except margin and padding

--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
             <button type="submit">Sign up</button>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">Copyright © Dragesia 2022</div>
 </body>
 </html>
