--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>My Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="links">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
+    <div class="hero">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a style="margin-right: 0;"href="#">header link three</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="welcome">
-        <div class="content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contast</p>
-            <button type="submit">Sign up</button>
+        <div class="welcome">
+            <div class="content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contast</p>
+                <button type="submit">Sign up</button>
+            </div>
+            <div class="photo">this is a placeholder for image</div>
         </div>
-        <div class="photo">this is a placeholder for image</div>
     </div>
     <div class="infos">
         <h1>Some random information.</h1>
